# LieAlgebra

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RootStructure.cpp  RootStructure.h  TESTPLZ  clean_seemake.sh  cmake_install.cmake  main.cpp  run_prog.sh
libs/: CMakeLists.txt  LoggerLibrary.h  Makefile  RootStructure.cpp  RootStructure.h  cmake_install.cmake
